@@ -1,8 +1,8 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from trytond.pool import PoolMeta
+from trytond.pool import PoolMeta, Pool
 
-__all__ = ['PartyReplace']
+__all__ = ['PartyReplace', 'PartyErase']
 
 
 class PartyReplace:
@@ -17,3 +17,26 @@ class PartyReplace:
             ('stock.shipment.drop', 'supplier'),
             ('stock.shipment.drop', 'customer'),
             ]
+
+
+class PartyErase:
+    __metaclass__ = PoolMeta
+    __name__ = 'party.erase'
+
+    def check_erase_company(self, party, company):
+        pool = Pool()
+        ShipmentDrop = pool.get('stock.shipment.drop')
+        super(PartyErase, self).check_erase_company(party, company)
+
+        shipments = ShipmentDrop.search([
+                ['OR',
+                    ('supplier', '=', party.id),
+                    ('customer', '=', party.id),
+                    ],
+                ('state', 'not in', ['done', 'cancel']),
+                ])
+        if shipments:
+            self.raise_user_error('pending_shipment', {
+                    'party': party.rec_name,
+                    'company': company.rec_name,
+                    })
