@@ -1,3 +1,4 @@
+* Check pending drop shipment to erase party
 * Create drop shipment depending on the shipment method
 
 Version 4.6.0 - 2017-10-30
